--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./mystyle.css">
+    <link rel="stylesheet" href="./appointment.css">
 </head>
 
 <body>
     <h1>Hello World</h1>
     <p>this is a paragraph</p>
+    <button id="btn_add" class="appointmentBtnClass">Add an appointment</button>
+    <script src="./appointment.js"></script>
 </body>
 
 </html>
